--- a/.gitignore
+++ b/.gitignore
@@ -7,16 +7,42 @@
 
 # npm
 node_modules
+package-lock.json
 
 # Don't include the compiled main.js file in the repo.
 # They should be uploaded to GitHub releases instead.
 main.js
+dist/
+build/
 
 # Exclude sourcemaps
 *.map
 
 # obsidian
 data.json
+.obsidian/
+*.trash
 
 # Exclude macOS Finder (System Explorer) View States
 .DS_Store
+
+# Environment files
+.env
+.env.local
+.env.*.local
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Testing
+coverage/
+.nyc_output/
+
+# Temporary files
+*.tmp
+*.temp
+.cache/
